base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: greeting-service
  name: greeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-service
  template:
    metadata:
      labels:
        app: greeting-service
    spec:
      containers:
        - name: app
          image: ghcr.io/gitops-ci-cd/greeting-service:26a978b3793dcfef9c7af474563b273a5027052a
          ports:
            - name: grpc
              containerPort: 50051
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 200m
              memory: 200M
