base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 50051
      targetPort: grpc
